add db but drop it with every release

--- a/flaskapp/Dockerfile
+++ b/flaskapp/Dockerfile
@@ -4,3 +4,4 @@ COPY ./app /app
 COPY ./requirements.txt /requirements.txt
 
 RUN python3 -m pip install -r /requirements.txt
+RUN (cd .. && export FLASK_APP=app:app && flask db init && flask db migrate -m "users table" && flask db upgrade)
